<resources>
    <string name="app_name">loginForm</string>
    <string name="logo_desc">App Logo</string>
    <string name="username_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="facebook_desc">Facebook Login</string>
    <string name="google_desc">Google Login</string>
    <string name="github_desc">GitHub Login</string>
    <string name="or_login_with">Or log in with</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="error_username_required">Username is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_password_length">Password must be at least 6 characters</string>
    <string name="error_invalid_credentials">Invalid username or password</string>
    <string name="create_account_title">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="username_only_hint">Username</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="login_prompt">Already have an account? Log in</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_confirm_password">Passwords do not match</string>
</resources>